--- a/clients/unshaded/pom.xml
+++ b/clients/unshaded/pom.xml
@@ -28,6 +28,11 @@
       <version>4.0.28.Final</version>
     </dependency>
     <dependency>
+      <groupId>net.jpountz.lz4</groupId>
+      <artifactId>lz4</artifactId>
+      <version>1.3.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-client</artifactId>
     </dependency>
