--- a/common/src/main/resources/tachyon-default.properties
+++ b/common/src/main/resources/tachyon-default.properties
@@ -121,6 +121,7 @@ tachyon.user.block.remote.writer.class=tachyon.client.netty.NettyRemoteBlockWrit
 tachyon.user.block.size.bytes.default=512MB
 tachyon.user.failed.space.request.limits=3
 tachyon.user.file.buffer.bytes=1MB
+tachyon.user.file.compression.enabled=false
 tachyon.user.file.master.client.threads=10
 tachyon.user.file.waitcompleted.poll.ms=1000
 tachyon.user.file.writetype.default=MUST_CACHE
